--- a/src/private/css/sass/shared/layers.scss
+++ b/src/private/css/sass/shared/layers.scss
@@ -184,6 +184,7 @@
 
         &.wrapped .layer-content {
           white-space: normal;
+          word-wrap: break-word;
           min-width: $maxTooltipWidth;
         }
 
